--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <footer class="footer">
     <div class="footer__grid" id="community">
       <div class="footer__input">
-        <form action="" class="form" id="form">
+        <form action="#" class="form" id="form">
           <input type="email" name="email" id="email" class="email" placeholder="Updates in your inbox…">
           <input type="submit" id="go" name="go"  title="Go" class="btn go" value="Go">
           <div class="info__error">
@@ -175,14 +175,14 @@
       <div class="footer__list">
         <ul class="ul__list">
           <li class="list__item"><a href="#" class="list__link">Home</a></li>
-          <li class="list__item"><a href="#" class="list__link">Pricing</a></li>
-          <li class="list__item"><a href="#" class="list__link">Products</a></li>
-          <li class="list__item"><a href="#" class="list__link">About Us</a></li>
+          <li class="list__item"><a href="#pricing" class="list__link">Pricing</a></li>
+          <li class="list__item"><a href="#product" class="list__link">Products</a></li>
+          <li class="list__item"><a href="#about" class="list__link">About Us</a></li>
         </ul>
         <ul class="ul__list">
-          <li class="list__item"><a href="#" class="list__link">Careers</a></li>
-          <li class="list__item"><a href="#" class="list__link">Community</a></li>
-          <li class="list__item"><a href="#" class="list__link">Privacy Policy</a></li>
+          <li class="list__item"><a href="#careers" class="list__link">Careers</a></li>
+          <li class="list__item"><a href="#community" class="list__link">Community</a></li>
+          <li class="list__item"><a href="#privacy" class="list__link">Privacy Policy</a></li>
         </ul>
       </div>
 
@@ -198,7 +198,7 @@
         <img src="images/logo-white.svg" title="Manage" alt="manage-icon" class="logo">
       </div>
 
-      <div class="footer__copy">
+      <div class="footer__copy" id="privacy">
         <p class="copy__text">Copyright 2020. All Rights Reserved</p>
       </div>
     </div>
